# high_quality_translation_validator

./: README.md  pyproject.toml
test/: test_validator.py
validator/: __init__.py  main.py  post-install.py
