[project]
name = "high_quality_translation"
version = "0.0.0"
description = "Validates that the translation is of high quality."
authors = [
    {name = "BrainLogic AI", email = "nicolas@brainlogic.ai"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">= 3.8.1"
dependencies = [
    "guardrails-ai>=0.4.0",
    "unbabel-comet"
]

[project.optional-dependencies]
dev = [
    "pyright",
    "pytest",
    "ruff"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rP"
testpaths = [
    "test"
]

[tool.pyright]
include = ["validator"]